# sam2_continuous_frames

./: .gitignore  demo.py  pyproject.toml
sam2/: build_sam.py
