[project]
name = "sam2_continous"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch==2.5.1+cu124 ; platform_system != 'Darwin'",
  "torchvision==0.20.1+cu124 ; platform_system != 'Darwin'",
  "numpy>=1.24.4",
  "tqdm>=4.66.1",
  "hydra-core>=1.3.2",
  "iopath>=0.1.10",
  "pillow>=9.4.0",
  "matplotlib>=3.9.1",
  "jupyter>=1.0.0",
  "opencv-python>=4.7.0"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }
]

